Fix wrapping of name field when table is narrow (#724)

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -188,10 +188,10 @@ layer(base);
 
 @layer base {
   * {
-    @apply border-border;
+    @apply border-md-outline-variant;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-md-background text-md-on-background;
   }
 }
 
